[package]
name = "stop-token"
version = "0.3.0"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/async-rs/stop-token"

description = "Experimental cooperative cancellation for async-std"

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[features]
docs = ["async-io"]

[dependencies]
pin-project-lite = "0.2.0"
async-channel = "1.6.1"
futures-core = "0.3.17"
tokio = { version = "1.12.0", features = ["time"], optional = true }
async-io = { version = "1.6.0", optional = true }

[dev-dependencies]
async-std = "1.10.0"
tokio = { version = "1.12.0", features = ["rt", "macros"] }
